# avtomaatoctory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .replit  2016_forced_separation_and_independent_business_building.md  AD_HYPERGRAPH_MAPPING_SUMMARY.md  AFFIDAVIT_ANALYSIS_REPORT.md  AFFIDAVIT_ENHANCEMENT_DEMO_RESULTS.md  AFFIDAVIT_shopify_evidence_comprehensive.md  AGENT_MODEL_FOR_ENTITIES.md  ANALYSIS_COMPLETE_SUMMARY.md  ANALYSIS_QUICK_REFERENCE.md  API_DOCUMENTATION.md  BANTJIES_DEBT_ANALYSIS.md  BENEFICIARY_RENUNCIATION_ANALYSIS.md  CASE_HYPERGRAPH_DOCUMENTATION.md  CHANGELOG.md  CHANGELOG_2025.md  CHANGELOG_IMPROVEMENTS_2025-10-12.md  CODEBASE_ACCURACY_ANALYSIS.md  CODEBASE_ANALYSIS_AND_IMPROVEMENTS.md  COMPLETION_REPORT_2025-10-11.md  COMPLIANCE_ANALYSIS_INTEGRATION.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_MODEL_SUITE_DOCUMENTATION.md  CONTRIBUTING.md  CORPORATE_AUTHORITY_ANALYSIS.md  CORRECTED_EVIDENCE_ANALYSIS.md  CRITICAL_FRAUD_TIMELINE_UPDATE.md  CRITICAL_KEY_POINTS_ANALYSIS.md  CRITICAL_TIMELINE_LEGAL_STRUCTURE.md  CRITICAL_dan_correspondence_enhanced.json  DANIEL_AUTONOMY_STRATEGY.md  DATABASE_SYNCHRONIZATION_SUMMARY.md  DATABASE_SYNC_IMPLEMENTATION_PLAN.md  DATABASE_SYNC_INSTRUCTIONS.md  DATABASE_SYNC_STATUS.md  DATABASE_SYNC_STATUS_20250811.md  DATABASE_SYNC_SUMMARY.md  (+264 more)
analysis/: cli.py
analysis-frontend/: .env.local  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
analysis_outputs/: README.md  main_conclusions_20251012_100556.md
attached_assets/: Pasted-20K-2016-forced-separation-and-independent-business-building-md-4-0K-AFFIDAVIT-ANALYSIS-REPORT-m-1760443310627_1760443310629.txt
case_2025_137857/: CASE_MANIFEST.md  CASE_SUMMARY_UPDATED.md  EVIDENCE_BASED_CASE_SUMMARY.md  QUICK_REFERENCE.md  README.md  TIMELINE_INTEGRATED.md  enhanced_verification_checklist.md  enhanced_verification_report.md
case_2025_137857_professional_court_docs/: EVIDENCE_BASED_FINDINGS.md  INDEX.md  PROFESSIONAL_SUMMARY.md  README.md
config/: settings.py
docs/: 1.2. MAT4719 - Answering Affidavit - ENHANCED.docx  1.2. MAT4719 - Answering Affidavit.BACKUP.docx  1.2. MAT4719 - Answering Affidavit.docx  1.2.MAT4719-AnsweringAffidavit-CORRECTED.docx  AFFIDAVIT_ENHANCEMENT_SUMMARY.md  AFFIDAVIT_ENHANCEMENT_SYSTEM.md  AFFIDAVIT_SHOPIFY_EVIDENCE_COMPREHENSIVE - ENHANCED.docx  AFFIDAVIT_SHOPIFY_EVIDENCE_COMPREHENSIVE.BACKUP.docx  AFFIDAVIT_SHOPIFY_EVIDENCE_COMPREHENSIVE.docx  APR-SEP-2025.md  Affidavit_Analysis_-_Part_1_Irrefutable_Proof.docx  Affidavit_Analysis_-_Part_2_Strong_Supporting_Evidence.docx  Affidavit_Analysis_-_Part_3_Circumstantial_and_Inferred_Points.docx  Affidavit_Analysis_-_Summary_of_Three-Part_Classification.docx  Affidavit_Critical_Addition_-_Jacqui_as_Responsible_Person.docx  Affidavit_Critical_Corrections_-_URGENT.docx  COMPUTER EXP MAR AND APR2025 (2).xlsx  DRAFT OF MAIN POINTS - RESPONSE.docx  FEATURE_INDEX.md  FORMAL NOTICE OF VOIDNESS DUE TO PERJURY AND FRAUD.md  MED-COERCIVE.md  README.md  (+20 more)
(+17536 files in other folders)
