[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = "\\.pyi?$"
extend-exclude = """/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/"""

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["frameworks", "tools", "fraud_analysis", "cases"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "node_modules"
]

[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rzonedevops-analysis"
version = "0.5.0"
description = "A comprehensive analytical framework for building timelines and managing evidence in criminal cases."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RZone DevOps", email = "devops@rzone.dev"},
]
keywords = ["analysis", "criminal-case", "timeline", "evidence", "hypergnn", "fraud-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "torch>=2.1.0,<3.0.0",
    "transformers>=4.30.0,<5.0.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.6.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "networkx>=3.0.0,<4.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "flask>=2.3.0,<3.0.0",
    "flask-cors>=4.0.0,<5.0.0",
    "openai>=1.0.0,<2.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "requests>=2.28.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "community>=1.0.0b1",
    "alembic>=1.16.0,<2.0.0",
    "pyflakes>=3.4.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "isort>=5.12.0",
    "pip-tools>=7.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pydocstyle>=6.3.0",
]
database = [
    "supabase>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
]
fraud-analysis = [
    "scikit-learn>=1.0.0,<2.0.0",
    "xgboost>=1.7.0,<2.0.0",
    "pandas>=1.5.0,<2.0.0",
]

[project.scripts]
analysis-cli = "src.main:main"

[project.urls]
Homepage = "https://github.com/rzonedevops/analysis"
Repository = "https://github.com/rzonedevops/analysis"
Issues = "https://github.com/rzonedevops/analysis/issues"

[tool.setuptools.packages.find]
include = ["src*"]
